<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Tgian"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hn2">

    <TableLayout
        android:background="@drawable/hinhnenbmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:background="#2FFFFFFF"
            android:text="@string/t_nh_bmi_chu_n_v_nh_ng_l_i_khuy_n_b_ch_cho_b_n"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="56dp" />

        <TableRow
            android:layout_width="244dp"
            android:layout_height="108dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="#7C000000"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/bmiten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/h_v_t_n"
                android:textAlignment="textEnd"
                android:textColor="#ffff"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:id="@+id/hoten"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:autofillHints=""
                android:background="#fff"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp"
                tools:targetApi="o" />

        </TableRow>

        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#7C000000"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:id="@+id/bmingaydo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ng_y_o"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:id="@+id/ngaydo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="date"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp"
                android:autofillHints="" tools:targetApi="o" />
        </TableRow>
        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#7C000000"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:id="@+id/bmituoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tu_i"
                android:textColor="#ffff"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:id="@+id/tuoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp"
                android:autofillHints="" tools:targetApi="o" />

        </TableRow>

        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#7C000000"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:id="@+id/bmichieucao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chi_u_cao_cm"
                android:textAlignment="textEnd"
                android:textColor="#ffff"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />


            <EditText
                android:id="@+id/chieucao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp"
                android:autofillHints="" tools:targetApi="o" />

        </TableRow>
        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#7C000000"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c_n_n_ng_kg"
                android:textColor="#ffff"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:id="@+id/cannang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:ems="10"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp"
                android:autofillHints="" tools:targetApi="o" />
        </TableRow>
        <TableRow
            android:gravity="center"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <Button
                android:id="@+id/tinh"
                android:onClick="btntinh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_nh" />
        </TableRow>
        <TableRow
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="#7C000000"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_width="233dp"
            android:layout_height="108dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bmi_c_a_b_n_l"
                android:textColor="#ffff"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="116dp" />

            <EditText
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="#fff"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/bmi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="141dp"
                android:autofillHints="" tools:targetApi="o"/>
        </TableRow>

        <TextView
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/loikhuyen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="116dp" />
        <TextView
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/need"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="116dp" />
    </TableLayout>

</ScrollView>